# adventofcode

./: .editorconfig  .gitignore  Cargo.toml  README.md  ruff.toml
2015/1/: solve.py  solve2.py
2015/10/: solve.py  solve2.py
2015/2/: solve.py  solve2.py
2015/3/: solve.py
2015/4/: solve.py  solve2.py
2015/5/: solve.py  solve2.py
2015/6/: solve.py  solve2.py
2015/7/: solve.py  solve2.py
2015/8/: solve.py  solve2.py
2015/9/: solve.py
2016/1/: solve.py  solve2.py
2016/10/: solve.py  solve2.py
2016/11/: solve.py
2016/2/: solve.py  solve2.py
2016/3/: solve.py  solve2.py
2016/4/: solve.py  solve2.py  test.txt
2016/5/: solve.py
2016/6/: solve.py  solve2.py
2016/7/: solve.py  solve2.py
2016/8/: solve.py
2016/9/: solve.py  solve2.py
2018/1/: solve.py
2019/1/: solve.py
2019/2/: solve.py  solve2.py
2019/3/: solve.py  solve2.py
2019/4/: foobar.txt  solve.py  solve2.py
2019/5/: solve.py  solve2.py
2019/6/: Makefile  solve.py  solve2.py
2019/7/: solve.py  solve2.py
2020/1/: solve.go
2020/10/: Makefile
2020/11/: solve.py  solve2.py
2020/12/: solve.py
2020/2/: solve.py  solve2.py
2020/3/: solve.py
2020/4/: solve2.py
2020/6/: solve.py  solve2.py
2020/7/: solve.py
2020/8/: solve2.py
2020/9/: solve.py  solve2.py
2020/day1/: solve.py
2020/day10/: solve.py  solve2.py
2020/day4/: solve.py
2020/day5/: solve.py  (+1 more)
2024/7/: Cargo.toml  pyproject.toml  solve.py  solve2.py
2024/7/src/: lib.rs
day22/: solve2.py
template/: solve.py
template_py_rs/: Cargo.toml  pyproject.toml
template_py_rs/src/: lib.rs
(+137 files in other folders)
